--- a/ArtemisAcademy/src/main/resources/application.properties
+++ b/ArtemisAcademy/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/artemisAcademySpring
 spring.datasource.username=root
 spring.datasource.password=sebas1994
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# port
+server.port=${PORT:8090}
