--- a/ArtemisAcademy/src/main/resources/application.properties
+++ b/ArtemisAcademy/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/artemisAcademySpring
-spring.datasource.username=root
-spring.datasource.password=sebas1994
+spring.datasource.url=jdbc:mysql://db4free.net:3306/artemisacademy
+spring.datasource.username=artemisuser
+spring.datasource.password=artemisapp
 # port
 server.port=${PORT:8090}
