--- a/ArtemisAcademy/src/main/resources/application.properties
+++ b/ArtemisAcademy/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://db4free.net:3306/artemisacademy
 spring.datasource.username=artemisuser
 spring.datasource.password=artemisapp
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # port
 server.port=${PORT:8090}
